--- a/css/DMAlaw2.css
+++ b/css/DMAlaw2.css
@@ -47,8 +47,8 @@ body {
 .contact {
   width: 100%;
   height: 450px;
-  /*background-color: gray;*/
-  background-image: url(./images/mooning.png);
+  background-color: gray;
+  /*background-image: url(./images/mooning.png);*/
   padding-top: 120px;
 }
 
