--- a/css/DMAlaw2.css
+++ b/css/DMAlaw2.css
@@ -19,6 +19,7 @@
 
 body {
   background-image: url(./images/white_bed_sheet.png);
+
 }
 
 .trans_box, h2, h1, h3  {
@@ -46,7 +47,6 @@ body {
   padding-left: 20px;
   font-size: 380%;
   font-variant: small-caps;
-  /*text-decoration: underline;*/
   border-radius: 0px;
 }
 
@@ -82,8 +82,6 @@ body {
 .logo {
   width: 200px;
   height: 120px;
-  /*float: right;*/
-  /*padding: 40px;*/
   background-image: url(./images/logo.png);
   background-repeat: no-repeat;
   background-size: 120px 120px;
@@ -91,7 +89,6 @@ body {
 
 table {
   font-size: 16px;
-  /*color: white;*/
 }
 
 .contact h1 {
@@ -113,21 +110,41 @@ p {
 
 a {
   text-decoration: none;
-  /*color: #333333;*/
   color: white;
 }
 
 a:hover {
   text-decoration: underline;
-  color: #000000;
+  color: #a6aea8;
 }
 
+#map {
+  font-size: 12px;
+}
 
 i {
   color: black;
   font-size: 48px;
 }
 
+.place {
+  width: 100%;
+  height: 530px;
+  background-attachment: fixed;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: relative;
+}
+
+#footer {
+  width: 100%;
+  background: rgba(21,24,22, 0.8);
+  position: absolute;
+  bottom: 0;
+  font-size: 10px;
+  color: #a6aea8;
+}
 
 
 
