--- a/css/DMAlaw2.css
+++ b/css/DMAlaw2.css
@@ -1,7 +1,7 @@
 .main_photo {
   width: 100%;
   height: 500px;
-  background: url(./images/IMG_3148.jpg);
+  background: url(https://lh6.googleusercontent.com/-ThG2LOmZeYM/UqjubP18LfI/AAAAAAAAF5s/Mv1TK_icPwE/w1118-h447-no/IMG_3148copy.jpg);
   background-attachment: fixed;
   background-size: contain;
   background-repeat: no-repeat;
@@ -10,7 +10,7 @@
 .bottom_photo {
   width: 100%;
   height: 530px;
-  background: url(./images/IMG_front_door_angle.jpg);
+  background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);
   background-attachment: fixed;
   background-size: contain;
   background-repeat: no-repeat;
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-image: url(./images/white_bed_sheet.png);
+  background-image: url(https://lh6.googleusercontent.com/-1La-RANZ3FU/UqjuciWi1WI/AAAAAAAAF5w/ZHD3gpdBj5c/s54-no/white_bed_sheet.png);
 
 }
 
@@ -82,7 +82,7 @@ body {
 .logo {
   width: 200px;
   height: 120px;
-  background-image: url(./images/logo.png);
+  background-image: url(https://lh6.googleusercontent.com/-axgaSLN6aTM/UqjubD6_sZI/AAAAAAAAF5g/tU1lS_SYMyU/s103-no/logo.png);
   background-repeat: no-repeat;
   background-size: 120px 120px;
 }
