--- a/css/DMAlaw2.css
+++ b/css/DMAlaw2.css
@@ -9,7 +9,8 @@
 
 .bottom_photo {
   width: 100%;
-  height: 530px;
+  /*min-height: 550px;*/
+  height: 500px;
   background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);
   background-attachment: fixed;
   background-size: contain;
@@ -19,29 +20,17 @@
 
 body {
   background-image: url(https://lh6.googleusercontent.com/-1La-RANZ3FU/UqjuciWi1WI/AAAAAAAAF5w/ZHD3gpdBj5c/s54-no/white_bed_sheet.png);
-
 }
 
 .trans_box, h2, h1, h3  {
   font-family: 'Cardo';
 }
 
+
 .trans_box {
   color: white;
-}
-
-/*.photofilter {
-  width: 100%;
-  height: 400px;
-  background: rgba(130,130,130, 0.5);
-  background-attachment: fixed;
-  background-size: contain;
-  background-repeat: no-repeat;
-}*/
-
-.trans_box {
   background: rgba(21,24,22, 0.8);
-  width: 30%;
+  width: 300px;
   height: 230px;
   margin-top: 40px;
   padding-left: 20px;
@@ -50,13 +39,6 @@ body {
   border-radius: 0px;
 }
 
-/*.trans_header {
-  background: rgba(21,24,22, 0.8);
-  width: 43%;
-  height: 50px;
-  padding: 10px;
-  color: white;
-}*/
 
 .tag_line {
   text-align: left;
@@ -71,9 +53,9 @@ body {
 
 .contact {
   width: 100%;
-  height: 500px;
+  min-height: 600px;
+  max-height: 600px;
   background-color: rgb(21,24,22);
-  /*background-image: url(./images/dark_wall_@2X.png);*/
   padding-top: 20px;
   color: white;
   font-family: Oxygen;
@@ -127,24 +109,24 @@ i {
   font-size: 48px;
 }
 
-.place {
+/*.place {
   width: 100%;
-  height: 530px;
-  background-attachment: fixed;
-  background-size: contain;
+  height: 530px;*/
+  /*background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);*/
+  /*background-attachment: fixed;*/
+  /*background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-  position: relative;
-}
+}*/
 
-#footer {
+/*#footer {
   width: 100%;
   background: rgba(21,24,22, 0.8);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   font-size: 10px;
   color: #a6aea8;
-}
+}*/
 
 
 
