--- a/css/DMAlaw2.scss
+++ b/css/DMAlaw2.scss
@@ -10,6 +10,7 @@
 .bottom_photo {
   width: 100%;
   height: 700px;
+  // background: url(https://dl.dropboxusercontent.com/u/379793/IMG_3135.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -21,13 +22,16 @@
   background-image: url(https://lh6.googleusercontent.com/-1La-RANZ3FU/UqjuciWi1WI/AAAAAAAAF5w/ZHD3gpdBj5c/s54-no/white_bed_sheet.png);
 }
 
-.trans_box, h2, h1, h3 {
+
+
+.trans_box, h2, h1, h3  {
   font-family: 'Cardo';
 }
 
+
 .trans_box {
   color: white;
-  background: rgba(21, 24, 22, 0.8);
+  background: rgba(21,24,22, 0.8);
   width: 300px;
   height: 230px;
   margin-top: 80px;
@@ -36,6 +40,7 @@
   font-variant: small-caps;
   border-radius: 0px;
 }
+
 
 .tag_line {
   text-align: left;
@@ -50,11 +55,10 @@
 
 .notice {
   padding-bottom: 50px;
+  p {
+    font-size: 22px;
+  }
 }
-.notice p {
-  font-size: 22px;
-}
-
 .contact_cover {
   position: absolute;
   background-image: url(https://dl.dropboxusercontent.com/u/379793/IMG_3135.jpg);
@@ -69,15 +73,13 @@
   -ms-filter: blur(1px);
   filter: blur(1px);
 }
-
 .contact_bg {
   width: 100%;
   height: 700px;
-  background: rgba(21, 24, 22, 0.8);
+  background: rgba(21,24,22, 0.8);
   position: absolute;
   z-index: -1;
 }
-
 .contact {
   width: 100%;
   height: 700px;
@@ -135,15 +137,17 @@ a:hover {
   color: black;
   font-size: 48px;
 }*/
+
 /*.place {
   width: 100%;
   height: 530px;*/
-/*background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);*/
-/*background-attachment: fixed;*/
+  /*background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);*/
+  /*background-attachment: fixed;*/
   /*background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
 }*/
+
 /*#footer {
   width: 100%;
   background: rgba(21,24,22, 0.8);
@@ -152,3 +156,18 @@ a:hover {
   font-size: 10px;
   color: #a6aea8;
 }*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
