--- a/css/DMAlaw2.css
+++ b/css/DMAlaw2.css
@@ -7,15 +7,6 @@
   background-repeat: no-repeat;
 }
 
-.bottom_photo {
-  width: 100%;
-  height: 700px;
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  /*background-position: bottom;*/
-}
-
 .copy_section {
   width: 100%;
   background-image: url(https://lh6.googleusercontent.com/-1La-RANZ3FU/UqjuciWi1WI/AAAAAAAAF5w/ZHD3gpdBj5c/s54-no/white_bed_sheet.png);
@@ -44,15 +35,19 @@
 }
 
 .copy {
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 50px;
 }
 
 .notice {
   padding-bottom: 50px;
+  text-align: center;
+  border-top: 3px solid gray;
+  padding-top: 50px;
 }
 .notice p {
-  font-size: 22px;
+  font-family: 'Cardo';
+  font-size: 26px;
 }
 
 .contact_cover {
@@ -84,8 +79,13 @@
   position: relative;
   padding-top: 20px;
   color: white;
-  font-family: 'Cardo';
+  font-family: 'Helvetica Neue';
+  font-weight: lighter;
   z-index: 100;
+}
+.contact h1 {
+  color: white;
+  padding-left: 10px;
 }
 
 .logo {
@@ -97,11 +97,8 @@
 }
 
 table {
-  font-size: 18px;
-}
-
-.contact h1 {
-  color: white;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
 .lbl {
@@ -131,24 +128,26 @@ a:hover {
   font-size: 12px;
 }
 
-/*i {
-  color: black;
-  font-size: 48px;
-}*/
-/*.place {
-  width: 100%;
-  height: 530px;*/
-/*background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);*/
-/*background-attachment: fixed;*/
-  /*background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom;
-}*/
-/*#footer {
-  width: 100%;
-  background: rgba(21,24,22, 0.8);
-  position: fixed;
+footer {
+  bottom: 0px;
+  font-size: 12px;
+  color: gray;
+}
+footer p {
   bottom: 0;
-  font-size: 10px;
-  color: #a6aea8;
-}*/
+  position: absolute;
+}
+footer a {
+  color: gray;
+}
+
+@media screen and (max-width: 1200px) {
+  .main_photo {
+    background-size: cover;
+    background-position: center;
+  }
+
+  .copy {
+    padding-top: 50px;
+  }
+}
