--- a/css/DMAlaw2.scss
+++ b/css/DMAlaw2.scss
@@ -7,15 +7,13 @@
   background-repeat: no-repeat;
 }
 
-.bottom_photo {
-  width: 100%;
-  height: 700px;
-  // background: url(https://dl.dropboxusercontent.com/u/379793/IMG_3135.jpg);
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  /*background-position: bottom;*/
-}
+// .bottom_photo {
+//   width: 100%;
+//   height: 700px;
+//   background-attachment: fixed;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+// }
 
 .copy_section {
   width: 100%;
@@ -49,14 +47,18 @@
 }
 
 .copy {
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 50px;
 }
 
 .notice {
   padding-bottom: 50px;
+  text-align: center;
+  border-top: 3px solid gray;
+  padding-top: 50px;
   p {
-    font-size: 22px;
+    font-family: 'Cardo';
+    font-size: 26px;
   }
 }
 .contact_cover {
@@ -86,8 +88,13 @@
   position: relative;
   padding-top: 20px;
   color: white;
-  font-family: 'Cardo';
+  font-family: 'Helvetica Neue';
+  font-weight: lighter;
   z-index: 100;
+  h1 {
+    color: white;
+    padding-left: 10px;
+  }
 }
 
 .logo {
@@ -99,11 +106,8 @@
 }
 
 table {
-  font-size: 18px;
-}
-
-.contact h1 {
-  color: white;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
 .lbl {
@@ -133,29 +137,30 @@ a:hover {
   font-size: 12px;
 }
 
-/*i {
-  color: black;
-  font-size: 48px;
-}*/
+footer {
+  bottom: 0px;
+  font-size: 12px;
+  color: gray;
+  // height: 120px;
+  p {
+    bottom: 0;
+    position: absolute;
+  }
+  a {
+    color: gray;
+  }
+}
 
-/*.place {
-  width: 100%;
-  height: 530px;*/
-  /*background: url(https://lh5.googleusercontent.com/-gHGu39W6hmc/UqjubOS7lUI/AAAAAAAAF50/wf1o4cX2ts4/w1118-h447-no/IMG_front_door_angle.jpg);*/
-  /*background-attachment: fixed;*/
-  /*background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom;
-}*/
+@media screen and (max-width: 1200px) {
+  .main_photo {
+    background-size: cover;
+    background-position: center;
 
-/*#footer {
-  width: 100%;
-  background: rgba(21,24,22, 0.8);
-  position: fixed;
-  bottom: 0;
-  font-size: 10px;
-  color: #a6aea8;
-}*/
+  }
+  .copy {
+    padding-top: 50px;
+  }
+}
 
 
 
