--- a/css/DMAlaw2.css
+++ b/css/DMAlaw2.css
@@ -16,6 +16,11 @@
   font-family: 'Cardo';
 }
 
+h1 {
+  font-size: 54px;
+  line-height: 1.4;
+}
+
 .trans_box {
   color: white;
   background: rgba(21, 24, 22, 0.8);
@@ -102,7 +107,7 @@ table {
 }
 
 .lbl {
-  font-weight: bold;
+  font-weight: 400;
   vertical-align: top;
 }
 
@@ -143,11 +148,45 @@ footer a {
 
 @media screen and (max-width: 1200px) {
   .main_photo {
-    background-size: cover;
-    background-position: center;
+    background-size: 125%;
+    background-position: top;
   }
 
   .copy {
     padding-top: 50px;
+  }
+
+  #notice_break {
+    display: none;
+  }
+}
+@media screen and (max-width: 900px) {
+  .main_photo {
+    background-size: 100%;
+    background-position: top;
+    height: 300px;
+  }
+
+  .trans_box {
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .main_photo {
+    background-size: 130%;
+    height: 30%;
+  }
+
+  .trans_box {
+    width: 200px;
+    height: 153px;
+    margin-top: 10px;
+  }
+  .trans_box h1 {
+    font-size: 36px;
+  }
+
+  .copy p {
+    font-size: 20px;
   }
 }
