--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,28 @@
+// NEW STYLES FOR THANK YOU VERSION
+body {
+  background-color: #E5EBEA;
+}
+.thank-you {
+  margin-top: 20%;
+  text-align: center;
+
+  h2 {
+    font-size: 40px;
+  }
+
+  .address {
+    margin-top: 200px;
+  }
+}
+
+
+
+
+
+
+
+
+// OLD STYLES
 .main_photo {
   width: 100%;
   height: 500px;
@@ -7,12 +32,15 @@
   background-repeat: no-repeat;
 }
 
+
 .copy_section {
   width: 100%;
   background-image: url(https://lh6.googleusercontent.com/-1La-RANZ3FU/UqjuciWi1WI/AAAAAAAAF5w/ZHD3gpdBj5c/s54-no/white_bed_sheet.png);
 }
 
-.trans_box, h2, h1, h3 {
+
+
+.trans_box, h2, h1, h3  {
   font-family: 'Cardo';
 }
 
@@ -23,7 +51,7 @@ h1 {
 
 .trans_box {
   color: white;
-  background: rgba(21, 24, 22, 0.8);
+  background: rgba(21,24,22, 0.8);
   width: 300px;
   height: 230px;
   margin-top: 80px;
@@ -32,6 +60,7 @@ h1 {
   font-variant: small-caps;
   border-radius: 0px;
 }
+
 
 .tag_line {
   text-align: left;
@@ -49,12 +78,11 @@ h1 {
   text-align: center;
   border-top: 3px solid gray;
   padding-top: 50px;
+  p {
+    font-family: 'Cardo';
+    font-size: 26px;
+  }
 }
-.notice p {
-  font-family: 'Cardo';
-  font-size: 26px;
-}
-
 .contact_cover {
   position: absolute;
   background-image: url(https://dl.dropboxusercontent.com/u/379793/IMG_3135.jpg);
@@ -69,15 +97,13 @@ h1 {
   -ms-filter: blur(1px);
   filter: blur(1px);
 }
-
 .contact_bg {
   width: 100%;
   height: 700px;
-  background: rgba(21, 24, 22, 0.8);
+  background: rgba(21,24,22, 0.8);
   position: absolute;
   z-index: -1;
 }
-
 .contact {
   width: 100%;
   height: 700px;
@@ -87,10 +113,10 @@ h1 {
   font-family: 'Helvetica Neue';
   font-weight: lighter;
   z-index: 100;
-}
-.contact h1 {
-  color: white;
-  padding-left: 10px;
+  h1 {
+    color: white;
+    padding-left: 10px;
+  }
 }
 
 .logo {
@@ -137,56 +163,69 @@ footer {
   bottom: 0px;
   font-size: 12px;
   color: gray;
-}
-footer p {
-  bottom: 0;
-  position: absolute;
-}
-footer a {
-  color: gray;
+  // height: 120px;
+  p {
+    bottom: 0;
+    position: absolute;
+  }
+  a {
+    color: gray;
+  }
 }
 
 @media screen and (max-width: 1200px) {
   .main_photo {
     background-size: 125%;
     background-position: top;
-  }
 
+  }
   .copy {
     padding-top: 50px;
   }
-
   #notice_break {
     display: none;
   }
 }
+
 @media screen and (max-width: 900px) {
   .main_photo {
     background-size: 100%;
     background-position: top;
     height: 300px;
   }
-
   .trans_box {
     margin-top: 50px;
   }
 }
+
 @media screen and (max-width: 700px) {
   .main_photo {
     background-size: 130%;
     height: 30%;
   }
-
   .trans_box {
     width: 200px;
     height: 153px;
     margin-top: 10px;
+    h1 {
+      font-size: 36px
+    }
   }
-  .trans_box h1 {
-    font-size: 36px;
-  }
-
-  .copy p {
-    font-size: 20px;
+  .copy {
+    p {
+      font-size: 20px;
+    }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
